--- a/src/app/info-icon-column/info-icon-column.component.css
+++ b/src/app/info-icon-column/info-icon-column.component.css
@@ -11,7 +11,7 @@ li {
 
 .material-symbols-outlined {
   padding: 6px;
-  background-color: hsl(0, 99%, 80%);
+  background-color: hsl(0, 99%, 86%);
   border-radius: 6px;
 }
 
