--- a/src/app/info-icon/info-icon.component.css
+++ b/src/app/info-icon/info-icon.component.css
@@ -7,6 +7,6 @@ li + li {
 
 .material-symbols-outlined {
   padding: 6px;
-  background-color: hsl(0, 99%, 80%);
+  background-color: hsl(0, 99%, 86%);
   border-radius: 6px;
 }
